fixing sections bleeding into each other

--- a/ts/apps/tradeschool/static/css/page/story.css
+++ b/ts/apps/tradeschool/static/css/page/story.css
@@ -111,8 +111,8 @@ li h4 span {
 }
 .col_1 {
 	margin-left: 50px;		
-	width: 50%;
-	max-width: 576px;
+	min-width: 50%;
+	max-width: 70%;
 }
 .add_bottom_margin {
 	margin-bottom: 50px;
